# virtual_butler

./: .env.example  .gitignore  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_ability_provider_config.py  0003_github_self_modify.py  0004_app_settings.py  0005_agent_steps.py  0006_pr_url.py  0007_conversations.py  0007_rename_abilities_to_skills.py  0008_conversations.py  0008_skills.py  0009_installed_skills.py  0010_pr_number.py
backend/app/: config.py  log_buffer.py  main.py
backend/app/abilities/: __init__.py  agent_modifier.py  butler_handler.py  session_handler.py
backend/app/api/: __init__.py  abilities.py  auth.py  butler.py  butler_ws.py  conversations.py  logs.py  logs_ws.py  self_modify.py  settings.py  setup.py  skill_store.py  skills.py  update.py  ws.py
backend/app/auth/: __init__.py  dependencies.py  github.py  jwt.py
backend/app/models/: __init__.py  ability.py  app_setting.py  conversation.py  deliverable.py  installed_skill.py  message.py  self_modify_job.py  session.py  skill.py  user.py
backend/app/providers/: __init__.py  anthropic.py  base.py  factory.py  google.py  ollama.py  openai.py
backend/app/schemas/: __init__.py  ability.py  auth.py  self_modify.py  settings.py  skill.py
backend/app/skills/: __init__.py  agent_modifier.py  butler_handler.py  (+4 more)
backend/tests/: conftest.py  test_abilities.py  test_auth.py  test_sessions.py  test_setup.py  test_skills.py
(+43 files in other folders)
